--- a/retailCRM/templates/base/base.html
+++ b/retailCRM/templates/base/base.html
@@ -44,9 +44,9 @@
                             <li><a class="dropdown-item" href="#">個人資料</a></li>
                             <li><hr class="dropdown-divider" /></li>
                             {% if user.is_authenticated %}
-                            <li><a class="dropdown-item" href="#">登出</a></li>
+                            <li><a class="dropdown-item" href="{% url 'logout' %}">登出</a></li>
                             {% else %}
-                            <li><a class="dropdown-item" href="#">登入</a></li>
+                            <li><a class="dropdown-item" href="{% url 'login' %}">登入</a></li>
                             {% endif %}
                         </ul>
                     </li>
